    was never implemented. This change reduces by 10MB the memory usage of
    xine-lib during playback (1/3 of the memory used while playing an mp3).
  * Use FFmpeg's own buildsystem, rather than wrapping automake around its
    sources; this allows to enable/disable FFmpeg features easily, and allow
    to properly support --disable-ffmpeg-(uncommon|popular)-codecs.

xine-lib (1.1.5) (Unreleased)
  * Security fixes:
    - Fix heap overflow in DMO loader. (CVE-2007-1246) [bug #1676925]
      Thanks to Kees Cook for reporting.
  * Improved PulseAudio plugin, now only one connection per instance is opened
    and the mainloop is threaded to reduce latency during playback.
  * Added XCB-based output plugins (Xv and XShm), to use in software using
    XCB to talk with the server rather than libX11 (like new Kaffeine).
    The plugins are contributed by Christoph Pfister with the help of
    Vincent Torri, Jamey Sharp and Christophe Thommeret.
  * Fix race condition in alsa audio out driver.
  * Fixed a crash in the eq2 plugin. [Bug 1644312]
  * Fixed content type detection for AAC (seekable) streams with ID3v2
    tags prefixed clobbering the preview buffer, by skipping over the tag.
  * Parse ID3v2 tags on AAC and FLAC files, as well as mp3 files.
  * Priority of the AAC encoder is now lower than anything else, so
    it's not going to crash xine down if you try to run an mp3 stream
    on FAAD2.
  * Relicense the xine-lib XML parser under the GNU LGPL, for use in other
    projects.
  * Improvement in portability to Solaris and NetBSD, thanks to Albert Lee and
    Sergey Svishchev respectively.
  * Spanish translation updated by Carlos E. Robinson M.
  * Don't leave libstk support to be detected automagically; also made it
    disabled by default as upstream is dead and a different libstk is found
    on Debian.
  * Improvement in portability to FreeBSD, merged some patches (with changes)
    from the ports.